// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature /> renders the <Feature /> full of data 1`] = `
<div
  class="sc-cNKqjZ gMnlkb"
>
  <h1
    class="sc-AjmGg bLQwdP"
  >
    Unlimited movies, TV shows, and more.
  </h1>
  <h2
    class="sc-khQegj gqMvDC"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;

exports[`<Feature /> renders the <Feature /> with just a subtitle 1`] = `
<div
  class="sc-cNKqjZ gMnlkb"
>
  <h2
    class="sc-khQegj gqMvDC"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;

exports[`<Feature /> renders the <Feature /> with just a title 1`] = `
<div
  class="sc-cNKqjZ gMnlkb"
>
  <h1
    class="sc-AjmGg bLQwdP"
  >
    Unlimited movies, TV shows, and more.
  </h1>
</div>
`;
